--- a/Clean_Loginfo_Key_Metrics.ipynb
+++ b/Clean_Loginfo_Key_Metrics.ipynb
@@ -9,9 +9,11 @@
     "The exploration will follow the following steps:\n",
     "1. Load test and training dataset and necessary python packages\n",
     "\n",
-    "2. Convert data in the three memory columns to analyzable form\n",
+    "2. Convert data in the three memory columns into analyzable form\n",
     "\n",
-    "3. Clean data points with \"NA\""
+    "3. Convert \"NA\" into null value\n",
+    "\n",
+    "4. Export a cleaned csv file"
    ]
   },
   {
@@ -23,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -36,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -55,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +199,7 @@
        "4             16G                 8.4GB   Job completed successfully  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -262,8 +264,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Rename changed memory columns\n",
@@ -273,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +350,7 @@
        "4              12288                16384                     8601.6"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,12 +364,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**3. Clean data points with \"NA\"**"
+    "**3. Convert \"NA\" into null value**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +381,7 @@
        "Name: Job Result, dtype: int64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -428,6 +432,20 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>application_1513303661803_25646_asrd.cp.big.da...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1983.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
        "      <td>application_1513303661803_23926_asrd.cp.big.da...</td>\n",
@@ -440,6 +458,20 @@
        "      <td>6144.0</td>\n",
        "      <td>8601.6</td>\n",
        "      <td>Job completed successfully</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>application_1513303661803_21767_asrd.cp.big.da...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>143.6</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -469,90 +501,61 @@
        "      <td>8601.6</td>\n",
        "      <td>Job completed successfully</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>6</td>\n",
-       "      <td>application_1513303661803_21050_asrd.cp.big.da...</td>\n",
-       "      <td>1.513730e+09</td>\n",
-       "      <td>17/12/20 00:38:46</td>\n",
-       "      <td>1513730326</td>\n",
-       "      <td>5</td>\n",
-       "      <td>17/12/20 00:38:37</td>\n",
-       "      <td>2048.0</td>\n",
-       "      <td>10240.0</td>\n",
-       "      <td>1247.6</td>\n",
-       "      <td>Job completed successfully</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>8</td>\n",
-       "      <td>application_1513303661803_23378_asrd.cp.big.da...</td>\n",
-       "      <td>1.513786e+09</td>\n",
-       "      <td>17/12/20 16:11:25</td>\n",
-       "      <td>1513786285</td>\n",
-       "      <td>5</td>\n",
-       "      <td>17/12/20 16:11:17</td>\n",
-       "      <td>12288.0</td>\n",
-       "      <td>10240.0</td>\n",
-       "      <td>8601.6</td>\n",
-       "      <td>Job completed successfully</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "   S.No.                                           Log File  \\\n",
+       "0      1  application_1513303661803_25646_asrd.cp.big.da...   \n",
        "1      2  application_1513303661803_23926_asrd.cp.big.da...   \n",
+       "2      3  application_1513303661803_21767_asrd.cp.big.da...   \n",
        "3      4  application_1513303661803_24558_asrd.cp.big.da...   \n",
        "4      5  application_1513303661803_24282_asrd.cp.big.da...   \n",
-       "5      6  application_1513303661803_21050_asrd.cp.big.da...   \n",
-       "7      8  application_1513303661803_23378_asrd.cp.big.da...   \n",
        "\n",
        "    state_accept_epoch (s)  state_running_time  state_running_epoch (s)  \\\n",
+       "0                      NaN                 NaN                      NaN   \n",
        "1             1.513792e+09   17/12/20 17:52:06               1513792326   \n",
+       "2                      NaN                 NaN                      NaN   \n",
        "3             1.513814e+09   17/12/21 00:01:41               1513814501   \n",
        "4             1.513797e+09   17/12/20 19:05:06               1513796706   \n",
-       "5             1.513730e+09   17/12/20 00:38:46               1513730326   \n",
-       "7             1.513786e+09   17/12/20 16:11:25               1513786285   \n",
        "\n",
        "  Waiting Time (in Seconds) spark_driver_start_time  Driver Memory (MB)  \\\n",
+       "0                       NaN                     NaN                 NaN   \n",
        "1                         6       17/12/20 17:51:57             12288.0   \n",
+       "2                       NaN                     NaN                 NaN   \n",
        "3                         5       17/12/21 00:01:33              8192.0   \n",
        "4                         9       17/12/20 19:04:52             12288.0   \n",
-       "5                         5       17/12/20 00:38:37              2048.0   \n",
-       "7                         5       17/12/20 16:11:17             12288.0   \n",
        "\n",
        "   Executor Memory (MB)  Memory Store Capacity (MB)  \\\n",
+       "0                   NaN                      1983.0   \n",
        "1                6144.0                      8601.6   \n",
+       "2                   NaN                       143.6   \n",
        "3               15360.0                      5632.0   \n",
        "4               16384.0                      8601.6   \n",
-       "5               10240.0                      1247.6   \n",
-       "7               10240.0                      8601.6   \n",
        "\n",
        "                    Job Result  \n",
+       "0                          NaN  \n",
        "1   Job completed successfully  \n",
+       "2                          NaN  \n",
        "3   Job completed successfully  \n",
-       "4   Job completed successfully  \n",
-       "5   Job completed successfully  \n",
-       "7   Job completed successfully  "
+       "4   Job completed successfully  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# remove 'NA'\n",
-    "jobs = logs[logs['Job Result'].isin([' Job failed',' Job completed successfully'])]\n",
-    "jobs = jobs.replace(' NA', np.nan)\n",
+    "# convert 'NA' into null value\n",
+    "jobs = logs.replace(' NA', np.nan).copy()\n",
     "jobs.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -560,21 +563,21 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 541 entries, 1 to 1055\n",
+      "Int64Index: 1057 entries, 0 to 1056\n",
       "Data columns (total 11 columns):\n",
-      "S.No.                         541 non-null int64\n",
-      "Log File                      541 non-null object\n",
-      " state_accept_epoch (s)       538 non-null float64\n",
-      " state_running_time           537 non-null object\n",
-      " state_running_epoch (s)      537 non-null object\n",
-      "Waiting Time (in Seconds)     537 non-null object\n",
-      "spark_driver_start_time       541 non-null object\n",
-      "Driver Memory (MB)            541 non-null float64\n",
-      "Executor Memory (MB)          541 non-null float64\n",
-      "Memory Store Capacity (MB)    541 non-null float64\n",
+      "S.No.                         1057 non-null int64\n",
+      "Log File                      1057 non-null object\n",
+      " state_accept_epoch (s)       539 non-null float64\n",
+      " state_running_time           538 non-null object\n",
+      " state_running_epoch (s)      538 non-null object\n",
+      "Waiting Time (in Seconds)     538 non-null object\n",
+      "spark_driver_start_time       543 non-null object\n",
+      "Driver Memory (MB)            543 non-null float64\n",
+      "Executor Memory (MB)          543 non-null float64\n",
+      "Memory Store Capacity (MB)    1031 non-null float64\n",
       "Job Result                    541 non-null object\n",
       "dtypes: float64(4), int64(1), object(6)\n",
-      "memory usage: 50.7+ KB\n"
+      "memory usage: 99.1+ KB\n"
      ]
     }
    ],
@@ -585,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -624,117 +627,135 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>106</th>\n",
-       "      <td>107</td>\n",
-       "      <td>application_1513303661803_18625_asrd.cp.big.da...</td>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>application_1513303661803_25646_asrd.cp.big.da...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>17/12/19 01:01:56</td>\n",
-       "      <td>12288.0</td>\n",
-       "      <td>10240.0</td>\n",
-       "      <td>8601.6</td>\n",
-       "      <td>Job failed</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1983.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>482</th>\n",
-       "      <td>483</td>\n",
-       "      <td>application_1513303661803_18626_asrd.cp.big.da...</td>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>application_1513303661803_21767_asrd.cp.big.da...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>17/12/19 01:01:58</td>\n",
-       "      <td>12288.0</td>\n",
-       "      <td>10240.0</td>\n",
-       "      <td>8601.6</td>\n",
-       "      <td>Job failed</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>143.6</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>483</th>\n",
-       "      <td>484</td>\n",
-       "      <td>application_1513303661803_18856_asrd.cp.big.da...</td>\n",
-       "      <td>1.513650e+09</td>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>application_1513303661803_19757_asrd.cp.big.da...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>17/12/19 02:19:46</td>\n",
-       "      <td>12288.0</td>\n",
-       "      <td>12480.0</td>\n",
-       "      <td>8601.6</td>\n",
-       "      <td>Job failed</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7168.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>926</th>\n",
-       "      <td>927</td>\n",
-       "      <td>application_1513303661803_18632_asrd.cp.big.da...</td>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>application_1513303661803_25231_asrd.cp.big.da...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>17/12/19 01:02:08</td>\n",
-       "      <td>12288.0</td>\n",
-       "      <td>10240.0</td>\n",
-       "      <td>8601.6</td>\n",
-       "      <td>Job failed</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4198.4</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11</td>\n",
+       "      <td>application_1513303661803_23835_asrd.cp.big.da...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7168.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     S.No.                                           Log File  \\\n",
-       "106    107  application_1513303661803_18625_asrd.cp.big.da...   \n",
-       "482    483  application_1513303661803_18626_asrd.cp.big.da...   \n",
-       "483    484  application_1513303661803_18856_asrd.cp.big.da...   \n",
-       "926    927  application_1513303661803_18632_asrd.cp.big.da...   \n",
+       "    S.No.                                           Log File  \\\n",
+       "0       1  application_1513303661803_25646_asrd.cp.big.da...   \n",
+       "2       3  application_1513303661803_21767_asrd.cp.big.da...   \n",
+       "6       7  application_1513303661803_19757_asrd.cp.big.da...   \n",
+       "9      10  application_1513303661803_25231_asrd.cp.big.da...   \n",
+       "10     11  application_1513303661803_23835_asrd.cp.big.da...   \n",
        "\n",
-       "      state_accept_epoch (s)  state_running_time  state_running_epoch (s)  \\\n",
-       "106                      NaN                 NaN                      NaN   \n",
-       "482                      NaN                 NaN                      NaN   \n",
-       "483             1.513650e+09                 NaN                      NaN   \n",
-       "926                      NaN                 NaN                      NaN   \n",
+       "     state_accept_epoch (s)  state_running_time  state_running_epoch (s)  \\\n",
+       "0                       NaN                 NaN                      NaN   \n",
+       "2                       NaN                 NaN                      NaN   \n",
+       "6                       NaN                 NaN                      NaN   \n",
+       "9                       NaN                 NaN                      NaN   \n",
+       "10                      NaN                 NaN                      NaN   \n",
        "\n",
-       "    Waiting Time (in Seconds) spark_driver_start_time  Driver Memory (MB)  \\\n",
-       "106                       NaN       17/12/19 01:01:56             12288.0   \n",
-       "482                       NaN       17/12/19 01:01:58             12288.0   \n",
-       "483                       NaN       17/12/19 02:19:46             12288.0   \n",
-       "926                       NaN       17/12/19 01:02:08             12288.0   \n",
+       "   Waiting Time (in Seconds) spark_driver_start_time  Driver Memory (MB)  \\\n",
+       "0                        NaN                     NaN                 NaN   \n",
+       "2                        NaN                     NaN                 NaN   \n",
+       "6                        NaN                     NaN                 NaN   \n",
+       "9                        NaN                     NaN                 NaN   \n",
+       "10                       NaN                     NaN                 NaN   \n",
        "\n",
-       "     Executor Memory (MB)  Memory Store Capacity (MB)   Job Result  \n",
-       "106               10240.0                      8601.6   Job failed  \n",
-       "482               10240.0                      8601.6   Job failed  \n",
-       "483               12480.0                      8601.6   Job failed  \n",
-       "926               10240.0                      8601.6   Job failed  "
+       "    Executor Memory (MB)  Memory Store Capacity (MB) Job Result  \n",
+       "0                    NaN                      1983.0        NaN  \n",
+       "2                    NaN                       143.6        NaN  \n",
+       "6                    NaN                      7168.0        NaN  \n",
+       "9                    NaN                      4198.4        NaN  \n",
+       "10                   NaN                      7168.0        NaN  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# close look at missing values\n",
-    "jobs[jobs[' state_running_time'].isnull()]"
+    "jobs[jobs[' state_running_time'].isnull()].head()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**4. export a cleaned csv file**"
+    "**4. Export a cleaned csv file**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "jobs.to_csv('/Users/shanxing/Documents/GitHub/Autodesk_AWS_Spark_ETL_Log_Analysis/Dataset/cleaned_jobs.csv')"
+    "jobs.to_csv('/Users/shanxing/Documents/GitHub/Autodesk_AWS_Spark_ETL_Log_Analysis/Dataset/Cleaned_Loginfo_Key_Metrics.csv')"
    ]
   }
  ],
