update with dashboard

--- a/Clean_Loginfo_Key_Metrics.ipynb
+++ b/Clean_Loginfo_Key_Metrics.ipynb
@@ -13,7 +13,9 @@
     "\n",
     "3. Convert \"NA\" into null value\n",
     "\n",
-    "4. Export a cleaned csv file"
+    "4. Adjust timestamp format\n",
+    "\n",
+    "5. Export a cleaned csv file"
    ]
   },
   {
@@ -25,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -33,19 +35,19 @@
    "source": [
     "# Load python packages\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import datetime\n",
+    "from IPython.core.interactiveshell import InteractiveShell"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Load csv file\n",
-    "logs = pd.read_csv('C:/Users/Mengyu/Desktop/study/Auto Desk/log_extraction/Spark_ETL_Loginfo_Key_Metrics_transformed_v3.csv')"
+    "logs = pd.read_csv('/Users/shanxing/Documents/GitHub/Autodesk_AWS_Spark_ETL_Log_Analysis/Dataset/Spark_ETL_Loginfo_Key_Metrics_Transformed_v3.csv')"
    ]
   },
   {
@@ -57,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +264,7 @@
        "4                            537                         NA  "
       ]
      },
-     "execution_count": 167,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -327,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -340,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +415,7 @@
        "4                  12288                    16384                  8601.6"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +446,7 @@
        "Name: job_result, dtype: int64"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +670,7 @@
        "4                            537                        NaN  "
       ]
      },
-     "execution_count": 173,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -720,21 +722,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 175,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#convert epoch seconds to timestamp format\n",
-    "import datetime\n",
-    "for i in ['state_accept_epoch','state_running_epoch','spark_driver_start_time_epoch','job_successfully_completed_at_time_epoch','job_failed_at_time_epoch']:\n",
-    "    p = i.replace(\"epoch\",\"datetime\")\n",
-    "    jobs[p] = pd.to_datetime(jobs[i].astype('float'),unit=\"s\")"
+    "**4. Adjust timestamp format**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -765,24 +761,29 @@
        " 'job_failed_at_time_datetime']"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(jobs.columns.values)\n"
+    "#convert epoch seconds to standard timestamp format\n",
+    "for i in ['state_accept_epoch','state_running_epoch','spark_driver_start_time_epoch','job_successfully_completed_at_time_epoch','job_failed_at_time_epoch']:\n",
+    "    p = i.replace(\"epoch\",\"datetime\")\n",
+    "    jobs[p] = pd.to_datetime(jobs[i].astype('float'),unit=\"s\")\n",
+    "\n",
+    "list(jobs.columns.values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# arrange the order of columns\n",
+    "# re-arrange the order of columns, replace nonstandard timestamp format\n",
     "jobs = jobs[['Log File',\n",
     " 'state_accept_datetime',\n",
     " 'state_accept_epoch',\n",
@@ -807,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1032,7 +1033,7 @@
        "4                            537                        NaN  "
       ]
      },
-     "execution_count": 178,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1069,9 +1070,7 @@
    ],
    "source": [
     "# final check\n",
-    "from IPython.core.interactiveshell import InteractiveShell\n",
     "InteractiveShell.ast_node_interactivity = \"all\"\n",
-    "\n",
     "jobs.head()\n",
     "jobs.info()"
    ]
@@ -1080,18 +1079,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**4. Export a cleaned csv file**"
+    "**5. Export a cleaned csv file**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "jobs.to_csv('C:/Users/Mengyu/Desktop/study/Auto Desk/log_extraction/Clean_Key_Metrics_v4.csv')"
+    "jobs.to_csv('/Users/shanxing/Documents/GitHub/Autodesk_AWS_Spark_ETL_Log_Analysis/Dataset/Clean_Key_Metrics_v4.csv')"
    ]
   }
  ],
@@ -1111,7 +1110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
